# bolt

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  config.hxx.in  config.json.in  main.cc  main.cxx  training.txt
bolt/: CMakeLists.txt  Debug.hh  bolt.cc  bolt.hh
bolt/backend/: CMakeLists.txt  backend.cc  backend.hh
bolt/backend/discord/: CMakeLists.txt  discord.cc  discord.hh
bolt/backend/socket/: httplib.h  socket.cc  socket.hh
bolt/logics/: CMakeLists.txt  logic.cc  logic.hh
bolt/logics/classifier/: CMakeLists.txt  classifier.cc  classifier.hh
bolt/logics/distance/: distance.cc  distance.hh
bolt/plugins/: CMakeLists.txt  plugin.cc  plugin.hh
bolt/plugins/http/: CMakeLists.txt  http.cc  http.hh
bolt/plugins/shell/: shell.cc  shell.hh
bolt/plugins/unknown/: CMakeLists.txt  unknown.cc  unknown.hh
cmd/: CMakeLists.txt  bolt.cxx
data/: CMakeLists.txt  config.json  model.json  responses.txt
docs/: CMakeLists.txt  Doxyfile.in
gnome-search-provider/: CMakeLists.txt  dev.rlxos.Bolt.SearchProvider.desktop  dev.rlxos.Bolt.SearchProvider.ini  dev.rlxos.Bolt.SearchProvider.service  dev.rlxos.Bolt.SearchProvider.service.dbus  gnome-search-cli.py  gnome-search-provider.py
model/: classifier.model  distance.model
plugins/: CMakeLists.txt
plugins/greeting/: greeting.cxx  sentences.list
plugins/joke/: joke.cxx  sentences.list
plugins/net/: search.cxx  training.txt
plugins/ostree/: ostree.cxx  sentences.list  training.txt
plugins/reminder/: reminder.cxx  sentences.list
plugins/search/: search.cxx  training.txt
plugins/unknown/: unknown.cxx
scripts/: merge-training.sh
services/: CMakeLists.txt  bolt.service  bolt.socket
src/: ApiCall.cxx  ApiCall.hxx  AudioListener.cxx  AudioListener.hxx  AudioResponder.cxx  AudioResponder.hxx  Bolt.cxx  Bolt.hxx  CMakeLists.txt  Listener.cxx  Listener.hxx  Model.cxx  Model.hxx  Plugin.hxx  Responder.cxx  Responder.hxx  StreamListener.cxx  StreamListener.hxx  StreamResponder.cxx  StreamResponder.hxx  Tokenizer.hxx  nlp.hxx
src/classifier/: Classifier.cxx  Classifier.hxx
src/classifier/naive_bayes/: NaiveBayes.cxx  NaiveBayes.hxx
src/config/: config.hxx
src/nlp/: Tokenizer.hxx
tests/: CMakeLists.txt  TestNaiveBayes.cxx
tests/data/: training.txt
